--- a/Changelog
+++ b/Changelog
@@ -1,9 +1,12 @@
 一、当前版本
 
-version 0.1.10.28.02
-- README新增使用说明
+version 0.1.10.28.03
+- 修复64位系统transmission编译错误
 
 二、更新历史
+
+v0.1.10.28.02
+- README新增使用说明
 
 v0.1.10.05.01
 - 首次提交
